--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -71,6 +71,7 @@ h2 {
 h3 {
   font-weight: 600;
   font-size: 3.75rem;
+  padding-bottom: 10px;
 }
 
 p,
@@ -328,10 +329,6 @@ footer .line {
   padding: 0 0 70px 0;
 }
 
-.knowledge h3 {
-  padding-bottom: 10px;
-}
-
 .knowledge__content {
   display: flex;
   align-items: flex-start;
@@ -358,6 +355,65 @@ footer .line {
   width: 100%;
   height: 960px;
   object-fit: cover;
+}
+
+.about_qualites {
+  color: var(--neutal-primary);
+  font-size: 3.75rem;
+  font-weight: 600;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-shadow: -1px 1px 0px #565857, 1px -1px 0px #565857, 1px 0px 0px #565857,
+    -1px -1px 0px #565857, 1px 1px 0px #565857;
+}
+
+/*--- Section bourses et objectif ---*/
+.achievements {
+  padding: 70px 0;
+}
+
+.achievements__content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.scholarship ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.scholarship li {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.scholarship li + li {
+  margin-top: 5px;
+}
+
+.scholarship span {
+  margin-left: 40px;
+}
+
+/*--- Section Références ---*/
+.references__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.references__content .buttons {
+  padding-bottom: 70px;
+}
+
+/*--- Section Présentation ---*/
+.presentation {
+  padding-bottom: 70px;
 }
 
 /*--------------------------------------------- Section Contenu Contact --------------------------------------------*/
