Ajout de certains fichiers Javascript, du contenu de la page des projets et de styles.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -470,3 +470,9 @@ footer .line {
 .texte-erreur {
   color: var(--complementary-primary);
 }
+
+/*--------------------------------------------- Section Projets --------------------------------------------*/
+.swiper-container {
+  width: 100%;
+  height: 500px;
+}
