--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,6 +43,7 @@ html {
 body {
   background-color: var(--neutal-primary);
   font-family: "Barlow Condensed", sans-serif;
+  margin: 0;
 }
 
 h1,
@@ -200,6 +201,13 @@ footer .social_icon {
   border: 1px solid var(--content-primary);
 }
 
+.button__small {
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  border: 1px solid var(--content-primary);
+}
+
 .buttons {
   display: flex;
   flex-direction: column;
@@ -224,7 +232,7 @@ footer .line {
 
 /*-------------------------------------------- Style des listes à points -------------------------------------------*/
 .list_dot {
-  list-style: url(svg/list.svg);
+  list-style: url(../svg/list.svg);
   padding-left: 18px;
 }
 
@@ -474,5 +482,58 @@ footer .line {
 /*--------------------------------------------- Section Projets --------------------------------------------*/
 .swiper-container {
   width: 100%;
-  height: 500px;
+  height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.project__title {
+  font-weight: 700;
+  font-size: 5.625rem;
+  line-height: 109.97%;
+  text-transform: uppercase;
+  margin: 20px 0 40px 0;
+}
+
+.swiper-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.navigation-buttons {
+  width: 20px !important;
+  height: 30px !important;
+  color: var(--content-primary) !important;
+}
+
+.swiper-pagination-bullet {
+  width: 15px !important;
+  height: 15px !important;
+  background-color: var(--content-transparence) !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--content-primary) !important;
+}
+
+.swiper-pagination-horizontal {
+  left: 10% !important;
+}
+
+.hero__bgi {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hero__bgi img {
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
 }
