--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -113,8 +113,12 @@ ul {
 ----------------------------------------------------------------------------*/
 
 /*------------------------------------------------------ Header ------------------------------------------------------*/
-header {
+.header {
   padding: 30px 0;
+}
+
+.header-is-hidden.is-scrolling-down > .header {
+  background-color: red;
 }
 
 .header__style {
@@ -249,7 +253,7 @@ footer .line {
 
 /*--------------------------------------------- Section Contenu Accueil -------------------------------------------*/
 .hero {
-  padding: 20px 0 70px 0;
+  padding: 20px 0 180px 0;
 }
 
 .content_index {
