--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,28 +102,32 @@ ul {
   margin-right: auto;
 }
 
-.wrapper_nav {
-  max-width: 1700px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 /*----------------------------------------------------------------------------
     Composants
 ----------------------------------------------------------------------------*/
 
 /*------------------------------------------------------ Header ------------------------------------------------------*/
 .header {
-  padding: 30px 0;
+  padding: 30px;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
-.header-is-hidden.is-scrolling-down > .header {
-  background-color: red;
+.is-scrolling-down .header .nav__animation,
+.is-scrolling-up .header .nav__animation {
+  transform: translate(80%, 800%) rotate(90deg);
+}
+
+[class="is-scrolling-up"] .header .nav__animation {
+  transform: rotate(0);
 }
 
 .header__style {
   display: flex;
-  align-items: stretch;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -137,7 +141,15 @@ ul {
   justify-content: space-between;
 }
 
-.nav_main li + li {
+.nav__animation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 50px;
+  transition: all 300ms;
+}
+
+.nav__animation li + li {
   margin-left: 50px;
 }
 
@@ -253,7 +265,7 @@ footer .line {
 
 /*--------------------------------------------- Section Contenu Accueil -------------------------------------------*/
 .hero {
-  padding: 20px 0 180px 0;
+  padding: 130px 0 70px 0;
 }
 
 .content_index {
