--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -372,7 +372,7 @@ footer .line {
 .softwares ul {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .softwares li + li {
@@ -659,7 +659,17 @@ footer .line {
 }
 
 .gallery {
-  margin: 60px 0 150px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 30px;
+  margin: 50px 0 70px 0;
+}
+
+.gallery img:first-child {
+  width: 70%;
+  grid-column: span 3;
+  justify-self: center;
 }
 
 .gallery__display {
@@ -669,4 +679,31 @@ footer .line {
   background-size: 100% auto;
   width: 100%;
   height: 700px;
+}
+
+.project__skills {
+  margin: 70px 0;
+}
+
+.skills_medias {
+  display: grid;
+  grid-template-columns: 1.3fr 0.7fr;
+  grid-gap: 30px;
+}
+
+.skills_infos {
+  align-self: center;
+}
+
+.skills_softwares h3 {
+  margin-top: 30px;
+}
+
+.project__final iframe {
+  width: 100vw;
+  height: 700px;
+}
+
+.credits {
+  margin: 70px;
 }
