--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -394,6 +394,12 @@ footer .line {
   height: 700px;
 }
 
+.about_medias {
+  overflow: hidden;
+  position: relative;
+  height: 70px;
+}
+
 .about_qualites {
   color: var(--neutal-primary);
   font-size: 3.75rem;
@@ -402,6 +408,49 @@ footer .line {
   text-transform: uppercase;
   text-shadow: -1px 1px 0px #565857, 1px -1px 0px #565857, 1px 0px 0px #565857,
     -1px -1px 0px #565857, 1px 1px 0px #565857;
+
+  white-space: nowrap;
+  animation: urmove 30s linear infinite alternate;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes urmove {
+  from {
+    right: 0;
+  }
+  to {
+    right: -1000px;
+  }
+}
+
+@keyframes urmove {
+  from {
+    right: 0;
+  }
+  to {
+    right: -1000px;
+  }
+}
+
+@keyframes about_medias {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.about_medias {
+  animation: fadeIn ease-in 1; /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+
+  animation-fill-mode: forwards; /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+
+  animation-duration: 30s;
+  animation-delay: 1.5s;
 }
 
 /*--- Section bourses et objectif ---*/
