--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,15 +86,29 @@ label {
   line-height: 135%;
 }
 
-a {
+a,
+li {
   color: var(--content-primary);
   text-decoration: none;
+  transition: all 300ms;
 }
 
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+a > img:hover,
+.nav__animation li:hover,
+a:hover,
+button:hover {
+  transition: all 300ms;
+  transform: scale(1.1);
+}
+
+::selection {
+  color: var(--complementary-secondary);
 }
 
 /*----------------------------------------------------------------------------
@@ -239,6 +253,13 @@ footer .social_icon {
   width: 325px;
   text-align: center;
   border: 1px solid var(--content-primary);
+
+  transition: all 300ms;
+}
+
+.button:hover {
+  background-color: var(--content-primary);
+  color: var(--neutal-primary);
 }
 
 .button__small {
@@ -452,6 +473,7 @@ footer .line {
   animation-duration: 30s;
   animation-delay: 1.5s;
 }
+/*-- Code pour l'aniamtion basé sur le code de Chris Drinkut (CodePen) : https://codepen.io/ChrisDrinkut/pen/GvrqNR --*/
 
 /*--- Section bourses et objectif ---*/
 .achievements {
