--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,6 +86,16 @@ label {
   line-height: 135%;
 }
 
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 3.375rem;
+  }
+
+  h3 {
+    font-size: 2.625rem;
+  }
+}
+
 a,
 li {
   color: var(--content-primary);
@@ -120,6 +130,18 @@ button:hover {
   margin-right: auto;
 }
 
+.wrapper_demo {
+  max-width: 1700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1800px) {
+  .wrapper_demo {
+    max-width: 1500px;
+  }
+}
+
 /*----------------------------------------------------------------------------
     Composants
 ----------------------------------------------------------------------------*/
@@ -132,6 +154,12 @@ button:hover {
   top: 0;
   left: 0;
   width: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .header {
+    padding: 20px;
+  }
 }
 
 .is-scrolling-down .header .nav__animation,
@@ -169,6 +197,16 @@ button:hover {
 
 .nav__animation li + li {
   margin-left: 50px;
+}
+
+@media screen and (max-width: 600px) {
+  .nav__animation {
+    margin-right: 30px;
+  }
+
+  .nav__animation li + li {
+    margin-left: 30px;
+  }
 }
 
 /*------------------------------------------------------ Footer ------------------------------------------------------*/
@@ -210,8 +248,22 @@ footer .social_icon {
 }
 
 /*---------------------------------------------------- Conteneur ---------------------------------------------------*/
-.site-container {
+.site-container,
+.site-container-index {
   padding: 0 50px;
+}
+
+@media screen and (max-width: 1700px) {
+  .site-container,
+  .site-container-index {
+    padding: 0 100px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .site-container-index {
+    padding: 0;
+  }
 }
 
 /*----------------------------------------------- Barre de défilement ----------------------------------------------*/
@@ -291,6 +343,18 @@ footer .line {
   padding-top: 30px;
 }
 
+@media screen and (max-width: 1000px) {
+  .line {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .line {
+    width: 70%;
+  }
+}
+
 /*-------------------------------------------- Style des listes à points -------------------------------------------*/
 .list_dot {
   list-style: url(../svg/list.svg);
@@ -300,6 +364,12 @@ footer .line {
 /*--------------------------------------------- Section Contenu Accueil -------------------------------------------*/
 .hero {
   padding: 130px 0 70px 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .hero {
+    padding: 90px 0 70px 0;
+  }
 }
 
 .content_index {
@@ -338,6 +408,32 @@ footer .line {
   position: absolute;
   top: -120%;
   right: 7%;
+}
+
+@media screen and (max-width: 1300px) {
+  .content_index {
+    flex-direction: column;
+  }
+
+  .index_infos {
+    align-self: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .index_infos .titles {
+    position: static;
+  }
+
+  .content_index .demo_reel {
+    width: 100%;
+  }
+
+  .index_infos .button {
+    margin: 10% 0 0 0;
+  }
 }
 
 /*--------------------------------------------- Section Contenu À propos -------------------------------------------*/
