--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,11 +86,13 @@ label {
   line-height: 135%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   h1 {
     font-size: 3.375rem;
   }
+}
 
+@media screen and (max-width: 700px) {
   h3 {
     font-size: 2.625rem;
   }
@@ -207,6 +209,15 @@ button:hover {
   .nav__animation li + li {
     margin-left: 30px;
   }
+
+  .is-scrolling-down .header .nav__animation,
+  .is-scrolling-up .header .nav__animation {
+    transform: translate(75%, 700%) rotate(90deg);
+  }
+
+  [class="is-scrolling-up"] .header .nav__animation {
+    transform: rotate(0);
+  }
 }
 
 /*------------------------------------------------------ Footer ------------------------------------------------------*/
@@ -268,19 +279,13 @@ footer .social_icon {
 @media screen and (max-width: 1700px) {
   .site-container,
   .site-container-index {
-    padding: 0 100px;
+    padding: 0 70px;
   }
 }
 
 @media screen and (max-width: 1300px) {
   .site-container-index {
     padding: 0;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .site-container {
-    padding: 0 70px;
   }
 }
 
@@ -398,6 +403,12 @@ footer .line {
   }
 }
 
+@media screen and (max-width: 700px) {
+  .hero {
+    padding: 90px 0 40px 0;
+  }
+}
+
 .content_index {
   display: flex;
   align-items: center;
@@ -471,6 +482,19 @@ footer .line {
   padding: 0 0 70px 0;
 }
 
+@media screen and (max-width: 1220px) {
+  .about__hero {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .about__hero {
+    padding: 0 0 40px 0;
+  }
+}
+
 .about__hero__content {
   display: flex;
   flex-direction: column;
@@ -483,8 +507,62 @@ footer .line {
   height: 100%;
 }
 
+@media screen and (max-width: 1410px) {
+  .about__hero .about__picture {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .about__hero .about__picture {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .about__hero .about__picture {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about__hero .about__picture {
+    width: 100%;
+  }
+}
+
 .about_alanisbedard {
   margin-left: 100px;
+}
+
+@media screen and (max-width: 1220px) {
+  .about_alanisbedard {
+    margin: 0 70px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .about_alanisbedard {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .about_alanisbedard h1 {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .about_alanisbedard h1 {
+    font-size: 2.7rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .about_alanisbedard h1 {
+    font-size: 2.5rem;
+  }
 }
 
 .about_alanisbedard h1 {
@@ -507,9 +585,39 @@ footer .line {
 }
 
 .knowledge__content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 0.8fr 0.8fr 1.4fr;
+}
+
+@media screen and (max-width: 1400px) {
+  .knowledge__content {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+
+  .knowledge__content div {
+    justify-self: center;
+  }
+
+  .languages {
+    grid-column: span 2;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .knowledge__content {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .knowledge__content div {
+    justify-self: self-start;
+  }
+
+  .languages {
+    grid-column: span 1;
+  }
 }
 
 .softwares ul {
@@ -532,6 +640,7 @@ footer .line {
   background-image: url(../images/about-projects.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
   background-size: cover;
   width: 100%;
   height: 700px;
@@ -606,6 +715,14 @@ footer .line {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+  .achievements__content {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
 }
 
 .scholarship ul {
@@ -942,6 +1059,7 @@ footer .line {
   background-image: url(../images/projet1-display.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
   background-size: 100% auto;
   width: 100%;
   height: 700px;
