Ajout de la page 404 et modifier le contenu des pages de projet.

--- a/css/styles.css
+++ b/css/styles.css
@@ -775,6 +775,10 @@ footer .line {
   justify-content: center;
 }
 
+.contact__content > * {
+  flex: 1;
+}
+
 .contact_infos {
   padding-right: 70px;
 }
