--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,17 @@ footer .line {
   padding-left: 18px;
 }
 
+/*---------------------------------------------- Style de la page 404 ----------------------------------------------*/
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.not-found .button {
+  margin-top: 50px;
+}
+
 /*--------------------------------------------- Section Contenu Accueil -------------------------------------------*/
 .hero {
   padding: 130px 0 70px 0;
