--- a/css/styles.css
+++ b/css/styles.css
@@ -1232,7 +1232,23 @@ footer .line {
 
 .project__final iframe {
   width: 100%;
-  height: 700px;
+  height: 720px;
+}
+
+@media screen and (max-width: 1200px) {
+  .project__final iframe {
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .project__final iframe {
+    height: 300px;
+  }
+}
+
+.ytp-large-play-button-red-bg .ytp-large-play-button-bg {
+  fill: #151515 !important;
 }
 
 .credits {
@@ -1242,4 +1258,15 @@ footer .line {
 
 .credits a:hover {
   color: var(--complementary-secondary);
+}
+
+/*--------------------------------------------- Section Animations --------------------------------------------*/
+
+.transition-fadein {
+  opacity: 1;
+  transition: all 50ms;
+}
+
+.html.is-animating .transition-fade {
+  opacity: 0;
 }
