--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,10 @@ footer .social_icon {
   padding: 0 50px;
 }
 
+.site-container-index {
+  height: 100vh;
+}
+
 @media screen and (max-width: 1700px) {
   .site-container,
   .site-container-index {
@@ -415,6 +419,10 @@ footer .line {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.not-found h1 {
+  text-align: center;
 }
 
 .not-found .button {
@@ -677,6 +685,21 @@ footer .line {
   height: 700px;
 }
 
+@media screen and (max-width: 1200px) {
+  .about__display {
+    background-position: right;
+    height: 500px;
+    background-attachment: scroll;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about__display {
+    height: 300px;
+    background-attachment: scroll;
+  }
+}
+
 .about_medias {
   overflow: hidden;
   position: relative;
@@ -905,8 +928,7 @@ footer .line {
   .form {
     padding-left: 0;
     padding-top: 30px;
-    border-left: 0 solid var(--content-primary);
-    border-top: 0.044rem solid var(--content-primary);
+    border-left: none;
     width: 100%;
     height: 500px;
   }
@@ -1039,7 +1061,7 @@ footer .line {
 .hero__bgi {
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: inherit;
 
   position: absolute;
   top: 0;
@@ -1049,7 +1071,7 @@ footer .line {
 .hero__bgi img {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: inherit;
   object-fit: cover;
 }
 
@@ -1061,7 +1083,7 @@ footer .line {
   left: 0;
   z-index: 0;
   width: 100%;
-  height: 100%;
+  height: inherit;
   opacity: 60%;
 
   background: var(--complementary-secondary);
@@ -1075,7 +1097,7 @@ footer .line {
   justify-content: center;
   align-items: center;
 
-  height: 100vh;
+  height: 80vh;
   margin-bottom: 60px;
 }
 .project__hero h1,
@@ -1172,12 +1194,28 @@ footer .line {
   .gallery__display {
     background-position: right;
     height: 500px;
+    background-attachment: scroll;
   }
 }
 
 @media screen and (max-width: 600px) {
   .gallery__display {
     height: 300px;
+    background-attachment: scroll;
+  }
+}
+
+@supports (-webkit-touch-callout: none) {
+  .gallery__display,
+  .about__display {
+    background-attachment: scroll;
+  }
+}
+
+@supports not (-webkit-touch-callout: none) {
+  .gallery__display,
+  .about__display {
+    background-attachment: fixed;
   }
 }
 
@@ -1261,12 +1299,80 @@ footer .line {
 }
 
 /*--------------------------------------------- Section Animations --------------------------------------------*/
-
-.transition-fadein {
-  opacity: 1;
-  transition: all 50ms;
+.animation__projects {
+  animation: transitionProjects 0.7s;
+  animation: transitionProjects 0.7s ease;
 }
 
-.html.is-animating .transition-fade {
-  opacity: 0;
+@keyframes transitionProjects {
+  from {
+    transition-duration: 0ms;
+    height: 80vh;
+  }
+  to {
+    transition-duration: 0ms;
+    height: 100vh;
+  }
+}
+
+.animation__project {
+  animation: transitionProject 0.7s;
+}
+
+@keyframes transitionProject {
+  from {
+    height: 100vh;
+  }
+  to {
+    height: 80vh;
+  }
+}
+
+.animation__fade {
+  animation: transitionFade 1.5s;
+}
+
+@keyframes transitionFade {
+  from {
+    opacity: 0;
+    transform: scale(1.2);
+  }
+  20% {
+    transform: scale(1.3);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animation__lazy {
+  animation: transitionLazy 2.5s;
+}
+
+@keyframes transitionLazy {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animation__page {
+  animation: transitionPage 1.5s;
+}
+
+@keyframes transitionFade {
+  from {
+    opacity: 0;
+    transform: scale(1.2);
+  }
+  20% {
+    transform: scale(1.3);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
